# rift

./: .clippy.toml  .gitignore  CLAUDE.md  Cargo.toml  README.md  RIFT.md  about.hbs  about.toml  flake.nix  rust-toolchain.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
app/: Cargo.toml  build.rs
app/DockTilePlugin/: Info.plist  Makefile  README.md  RiftDockTilePlugin.h  RiftDockTilePlugin.m
app/examples/: generate_default_settings.rs
app/src/: app_menus.rs  app_state.rs  app_state_tests.rs  appearance.rs  changelog_model.rs  channel.rs  coding_panel_enablement_state.rs  command_palette.rs  crash_recovery.rs  debug_dump.rs  download_method.rs  features.rs  font_fallback.rs  global_resource_handles.rs  gpu_state.rs  input_classifier.rs  input_suggestions.rs  input_suggestions_tests.rs  interval_timer.rs  keyboard.rs  keyboard_tests.rs  lib.rs  linear.rs  menu.rs  menu_tests.rs  modal.rs  network.rs  notification.rs  palette.rs  preview_config_migration.rs  preview_config_migration_tests.rs  profiling.rs  projects.rs  referral_theme_status.rs  resource_limits.rs  reward_view.rs  rift_managed_paths_watcher.rs  root_view.rs  root_view_tests.rs  search_bar.rs  (+10 more)
crates/ai/: Cargo.toml
crates/asset_cache/: Cargo.toml
crates/asset_macro/: Cargo.toml
crates/cloud_object_client/: Cargo.toml
crates/cloud_object_models/: Cargo.toml
crates/cloud_object_persistence/: Cargo.toml
crates/cloud_objects/: Cargo.toml
crates/command-signatures-v2/: build.rs
crates/computer_use/: Cargo.toml
crates/editor/: Cargo.toml
crates/fuzzy_match/: Cargo.toml
crates/graphql/: Cargo.toml  build.rs
crates/http_client/: Cargo.toml
crates/http_server/: Cargo.toml
crates/input_classifier/: Cargo.toml
crates/integration/: Cargo.toml
crates/ipc/: Cargo.toml
crates/isolation_platform/: Cargo.toml
crates/jsonrpc/: Cargo.toml
crates/languages/: Cargo.toml
crates/languages/grammars/: README.md
crates/languages/grammars/starlark/: config.yaml
crates/languages/src/: lib.rs  lib_tests.rs
crates/lsp/: Cargo.toml  README.md
crates/managed_secrets/: Cargo.toml
crates/managed_secrets_wasm/: Cargo.toml
crates/markdown_parser/: Cargo.toml
crates/mcp/: Cargo.toml
crates/node_runtime/: Cargo.toml
crates/onboarding/: Cargo.toml
crates/persistence/: Cargo.toml
crates/persistence/migrations/2024-11-08-223513_persist_object_link_sharing/: down.sql
crates/persistence/migrations/2024-12-25-215548_drop_server_id_from_tables/: down.sql
crates/persistence/migrations/2026-06-10-000000_rename_warp_width_columns/: down.sql  up.sql
crates/persistence/src/: lib.rs  migration_tests.rs  model.rs  model_tests.rs  schema.rs
crates/remote_server/: Cargo.toml
crates/repo_metadata/: Cargo.toml
crates/rift_ai/: Cargo.toml
crates/rift_ai/src/: client.rs  complete.rs  config.rs  context.rs  lib.rs  messages.rs  translate.rs
crates/rift_assets/: Cargo.toml
crates/rift_cli/: Cargo.toml  build.rs
crates/rift_completer/: Cargo.toml
crates/rift_core/: Cargo.toml
crates/rift_features/: Cargo.toml
crates/rift_files/: Cargo.toml
crates/rift_graphql_schema/: Cargo.toml
crates/rift_js/: Cargo.toml
crates/rift_logging/: Cargo.toml
crates/rift_ripgrep/: Cargo.toml
crates/rift_search_core/: Cargo.toml
crates/rift_server_auth/: Cargo.toml
crates/rift_server_auth/src/: anonymous_id.rs  auth_state.rs  credentials.rs  user.rs  user_tests.rs
crates/rift_server_auth/src/user/: persistence.rs  persistence_tests.rs
crates/rift_server_client/: Cargo.toml
crates/rift_terminal/: Cargo.toml
crates/rift_util/: Cargo.toml
crates/rift_web_event_bus/: Cargo.toml
crates/riftui/: Cargo.toml  build.rs
crates/riftui_core/: Cargo.toml  README.md  build.rs
crates/riftui_extras/: Cargo.toml
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs  macros.rs  macros_tests.rs  manager.rs  mod_tests.rs  schema.rs  toml_path_tests.rs
crates/simple_logger/: Cargo.toml
crates/string-offset/: Cargo.toml
crates/sum_tree/: Cargo.toml
crates/syntax_tree/: Cargo.toml
crates/syntax_tree/src/: lib.rs
crates/syntax_tree/src/queries/: highlight_query.rs  indent_query.rs  indent_query_tests.rs
crates/ui_components/: Cargo.toml
crates/vim/: Cargo.toml
crates/vim/src/: find_char.rs  matching_brackets.rs  paragraph_iterator.rs  vim.rs  word_iterator.rs
crates/vim/src/text_objects/: block.rs  paragraph.rs  paragraph_tests.rs  quote.rs  word.rs
crates/virtual_fs/: Cargo.toml
crates/voice_input/: Cargo.toml
crates/watcher/: Cargo.toml
docker/linux-dev/: Dockerfile  README.md
script/: Entitlements.plist  bootstrap  compile_icon  install_cargo_build_deps  install_cargo_release_deps  install_cargo_test_deps  patch_font_with_rift_glyph  prepare_bundled_pprof  prepare_bundled_resources  presubmit  rift_sudo  run  update_plist
script/font_fallback/: generate-families.py  generate-mappings.py
script/linux/: bootstrap  bundle  bundle_appimage  bundle_arch  bundle_deb  bundle_install  bundle_rpm  (+4 more)
(+2281 files in other folders)
