[package]
name = "languages"
edition = "2021"
authors = ["Rift"]
publish.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
rust-embed.workspace = true
arborium.workspace = true
lazy_static.workspace = true
rift_editor = { path = "../editor" }
rift_util.workspace = true
