[package]
name = "persistence"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[features]
local_fs = []

[dependencies]
chrono.workspace = true
diesel = { workspace = true, features = [
    "chrono",
    "32-column-tables",
] }
# Ideally, we'd make this an optional dependency, but due to the
# fact that we're enabling the `local_fs` feature in build.rs and not
# via some mechanism that the feature resolver has access to, we can't
# make it optional.
diesel_migrations = "2.2.0"
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
# Migration tests run the embedded migrations against an in-memory SQLite database. The
# `sqlite` backend and bundled `libsqlite3-sys` are dev-only so the production dependency
# set (which gets its SQLite backend from the `app` crate) is unchanged.
diesel = { workspace = true, features = ["chrono", "32-column-tables", "sqlite"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.33.0", features = ["bundled"] }
