[package]
name = "rift_ai"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
tempfile = "3"
