[package]
name = "rift_ai"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
tempfile = { workspace = true }
