[package]
name = "rift_server_auth"
version = "0.1.0"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[features]
integration_tests = []
skip_login = []
test-util = []

[dependencies]
anyhow.workspace = true
chrono.workspace = true
cynic.workspace = true
lasso.workspace = true
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
rift_core.workspace = true
rift_graphql.workspace = true
rift_managed_secrets.workspace = true
riftui_core.workspace = true
riftui_extras = { workspace = true, features = ["default"] }
