[package]
name = "syntax_tree"
version = "0.1.0"
edition = "2021"
authors = ["Rift"]
publish.workspace = true
license.workspace = true

[dependencies]
rangemap.workspace = true
arborium.workspace = true
riftui_core.workspace = true
rift_editor.workspace = true
languages.workspace = true
futures.workspace = true
futures-lite.workspace = true
parking_lot.workspace = true
log.workspace = true
string-offset.workspace = true
streaming-iterator = "0.1.9"
rift_util.workspace = true

[dev-dependencies]
rift_editor = { workspace = true, features = ["test-util"] }
riftui = { workspace = true, features = ["test-util"] }
