[package]
name = "vim"
version = "0.1.0"
edition = "2021"
publish.workspace = true
license.workspace = true

[dependencies]
rift_core.workspace = true
riftui_core.workspace = true
log.workspace = true
itertools.workspace = true
string-offset.workspace = true
anyhow.workspace = true
unindent = "0.2.4"
